fix gap size of team grid

--- a/src/sass/60_components/_components.team.scss
+++ b/src/sass/60_components/_components.team.scss
@@ -34,10 +34,9 @@
   &__members {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 2rem;
+    gap: 1rem;
     @include media-breakpoint-up(md) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 2rem;
     }
     @include media-breakpoint-up(xxl) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
